--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,1 @@
-auth_token = "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"
+auth_key = "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"
